--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -57,7 +57,7 @@
               </div>
 
               <div class="input-group" id="passwordgroup">
-                <input name="password" type="text" placeholder="Password"/>
+                <input name="password" type="password" placeholder="Password"/>
                <small class="message"></small>
               </div>
                <button id ="submitbutton" class="button">Claim your free trial</button>
