--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -45,12 +45,19 @@
         </div>
 
         <div class="calculation-result">
-          <div class="tips-amount">
-            <div class="title">Tips amount / person</div>
+          <div class="tips-amount calculation-amount">
+            <div class="title">
+            <div class="main-title">Tips amount </div>
+            <div class="subtitle">/ person</div>
+          </div> 
             <div class="amount">$4.27</div>
           </div>
+
           <div class="total-amount calculation-amount">
-          <div class="title">Total amount / person</div>
+            <div class="title">
+          <div class="main-title">Total amount </div>
+           <div class="subtitle">/ person</div>
+        </div>
           <div class="amount">$52.22</div>
         </div>
         <button class="button">Reset</button>
